--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,7 +13,7 @@
                                     placeholder="Tên đăng nhập">
                             </div>
                             <div class="password">
-                                <input id="password_form" name="password" type="text" class="user-input"
+                                <input id="password_form" name="password" type="password" class="user-input"
                                     placeholder="Mật khẩu">
                             </div>
                             <div class="login-forget-pass">
