--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -12,7 +12,7 @@
                                 <input id="username_form" type="text" name="email" class="user-input" placeholder="Email sinh viên">
                             </div>
                             <div class="password">
-                                <input id="password_form" type="text" name="password" class="user-input" placeholder="Mật khẩu">
+                                <input id="password_form" type="password" name="password" class="user-input" placeholder="Mật khẩu">
                             </div>
                             <div class="sign-up-but row justify-content-center">
                                 <button type="submit" class="sign-up-button font-normal-bold">Đăng Ký</button>
