Hoàn thành lib login
Khi vào trang lib thì sẽ check đã login chưa, nếu chưa thì chuyển sang trang login. nếu login (ở trang user) mà không phải acc admin thì cũng chuyển hướng.

--- a/views/layout-lib.hbs
+++ b/views/layout-lib.hbs
@@ -76,7 +76,7 @@
 
     <div id="account" class="col-auto">
       <span id="username">
-        Tên tài khoản
+        {{user.username}}
       </span>
       <a href="/librarian/lib-profile">
         <img id="profile-picture" src="/images/blank-profile-picture.png" class="rounded-circle" alt="Ảnh đại diện"
