--- a/views/librarian-login.hbs
+++ b/views/librarian-login.hbs
@@ -24,22 +24,26 @@
       </div>
 
       <div class="text-center h2">Đăng nhập</div>
-      <div style="padding: 20px 30px 30px 30px;">
-        <div class="username">
-          <input id="username_form" type="text" class="user-input border-bottom border-dark"
-            style="border: none; padding:5px" placeholder="Tên đăng nhập">
+      <form action="" method="POST">
+        <div style="padding: 20px 30px 30px 30px;">
+          <div class="username">
+            <input id="username_form" name="username" type="text" class="user-input border-bottom border-dark"
+              style="border: none; padding:5px" placeholder="Tên đăng nhập">
+          </div>
+          <div class="password">
+            <input id="password_form" name="password" type="password" class="user-input border-bottom border-dark"
+              style="border: none; padding:5px" placeholder="Mật khẩu">
+          </div>
         </div>
-        <div class="password">
-          <input id="password_form" type="text" class="user-input border-bottom border-dark"
-            style="border: none; padding:5px" placeholder="Mật khẩu">
-        </div>
-      </div>
 
-      <div class="login-forget-pass text-center">
-        <a href="/librarian">
-          <button class="login-button font-normal-bold" onclick="trigger_librarian_login()">Đăng nhập</button>
-        </a>
-      </div>
+        <div class="login-forget-pass text-center">
+
+          <button type="submit" class="login-button font-normal-bold">Đăng
+            nhập</button>
+
+        </div>
+      </form>
+
     </div>
   </div>
 
