--- a/views/search.hbs
+++ b/views/search.hbs
@@ -13,8 +13,8 @@
             </div>
             <form id="searchbar-in-picture" class="input-group col-8" method="POST">
 
-                <input type="text" name="searchBar"  class="form-control" placeholder="Tìm kiếm sách, tin tức, ..." aria-label="Username"
-                    aria-describedby="basic-addon1" value="{{query}}">
+                <input type="text" name="searchBar" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..."
+                    aria-label="Username" aria-describedby="basic-addon1" value="{{query}}">
                 <div class="input-group-append">
                     <button type="submit" class="input-group-text"><img src="/images/search-icon.svg" alt=""
                             style="width: 20px;"></button>
@@ -23,112 +23,137 @@
 
         </div>
         <div id="books_section">
-        <div class="row justify-content-center align-items-center" style="padding-top:10px">
-            <div class="col-1"></div>
-            <div class="col row justify-content-center">Có {{books.length}} kết quả</div>
-            <div class="row align-items-center justify-content-center col-6">
-                <div>Sắp xếp theo </div>
+            <div class="row justify-content-center align-items-center" style="padding-top:10px">
+                <div class="col-1"></div>
+                <div class="col row justify-content-center">Có {{books_length}} kết quả</div>
+                <div class="row align-items-center justify-content-center col-6">
+                    <div>Sắp xếp theo </div>
 
-                <div class="dropdown">
-                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdown_filtertype"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Độ phổ biến
-                    </button>
-                    <div id="dropdown_filtertype_content" class="dropdown-menu" aria-labelledby="dropdown_filtertype">
-                        <a class="dropdown-item" href="#">Độ phổ biến</a>
-                        <a class="dropdown-item" href="#">Gần nhất</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col row justify-content-center">+ Thêm bộ lọc</div>
-            <div class="col-1"></div>
-        </div>
-
-        {{#each books}}
-        <a href="/book-detail/{{this._id}}">
-            <div class="row justify-content-center" style="padding: 10px;">
-                <div class="col-4 col-sm-3 col-md-2 col-lg-1">
-                    <div class="d-flex justify-content-end">
-                        <img src={{this.image_url}} alt="" >
-
-                    </div>
-                </div>
-                <div class="col-6 col-sm-7 col-md-8 col-lg-8">
-                    <div class=" title-search">{{this.book_name}}</div>
-                    <div class="author-search">
-                        {{#each this.author}}
-                        {{this.name}}
-                        {{/each}}
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdown_filtertype"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Độ phổ biến
+                        </button>
+                        <div id="dropdown_filtertype_content" class="dropdown-menu"
+                            aria-labelledby="dropdown_filtertype">
+                            <a class="dropdown-item" href="#">Độ phổ biến</a>
+                            <a class="dropdown-item" href="#">Gần nhất</a>
                         </div>
-                    <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.desc}}</div>
-                </div>
-            </div>
-        </a>
-
-        {{/each}}
-    </div>
-    <div id="news_section" style="display: none;">
-        <div class="row justify-content-center align-items-center" style="padding-top:10px">
-            <div class="col-1"></div>
-            <div class="col row justify-content-center">Có {{news.length}} kết quả</div>
-            <div class="row align-items-center justify-content-center col-6">
-                <div>Sắp xếp theo </div>
-
-                <div class="dropdown">
-                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdown_filtertype"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Độ phổ biến
-                    </button>
-                    <div id="dropdown_filtertype_content" class="dropdown-menu" aria-labelledby="dropdown_filtertype">
-                        <a class="dropdown-item" href="#">Độ phổ biến</a>
-                        <a class="dropdown-item" href="#">Gần nhất</a>
                     </div>
                 </div>
+                <div class="col row justify-content-center">+ Thêm bộ lọc</div>
+                <div class="col-1"></div>
             </div>
-            <div class="col row justify-content-center">+ Thêm bộ lọc</div>
-            <div class="col-1"></div>
+            <div class="tab-content">
+                {{#each books}}
+                <a href="/book-detail/{{this._id}}">
+                    <div class="row justify-content-center" style="padding: 10px;">
+                        <div class="col-4 col-sm-3 col-md-2 col-lg-1">
+                            <div class="d-flex justify-content-end">
+                                <img src={{this.image_url}} alt="">
+
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-7 col-md-8 col-lg-8">
+                            <div class=" title-search">{{this.book_name}}</div>
+                            <div class="author-search">
+                                {{#each this.author}}
+                                {{this.name}}
+                                {{/each}}
+                            </div>
+                            <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.desc}}</div>
+                        </div>
+                    </div>
+                </a>
+                {{/each}}
+            </div>
+
+
+            <nav id="book_nav">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        {{#each news}}
-        <a href="/news-detail/{{this._id}}">
-            <div class="row justify-content-center" style="padding: 10px;">
-                <div class="col-4 col-sm-3 col-md-2">
-                    <div class="d-flex justify-content-end">
-                        <img src={{this.image_url}} alt="">
 
+
+        <div id="news_section" style="display: none;">
+            <div class="row justify-content-center align-items-center" style="padding-top:10px">
+                <div class="col-1"></div>
+                <div class="col row justify-content-center">Có {{news.length}} kết quả</div>
+                <div class="row align-items-center justify-content-center col-6">
+                    <div>Sắp xếp theo </div>
+
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdown_filtertype"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Độ phổ biến
+                        </button>
+                        <div id="dropdown_filtertype_content" class="dropdown-menu"
+                            aria-labelledby="dropdown_filtertype">
+                            <a class="dropdown-item" href="#">Độ phổ biến</a>
+                            <a class="dropdown-item" href="#">Gần nhất</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-6 col-sm-7 col-md-8">
-                    <div class=" title-search">{{this.title}}</div>
-                    <div class="author-search">{{this.date}}</div>
-                    <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.desc}}</div>
-                </div>
+                <div class="col row justify-content-center">+ Thêm bộ lọc</div>
+                <div class="col-1"></div>
             </div>
-        </a>
+            {{#each news}}
+            <a href="/news-detail/{{this._id}}">
+                <div class="row justify-content-center" style="padding: 10px;">
+                    <div class="col-4 col-sm-3 col-md-2">
+                        <div class="d-flex justify-content-end">
+                            <img src={{this.image_url}} alt="">
 
-        {{/each}}
+                        </div>
+                    </div>
+                    <div class="col-6 col-sm-7 col-md-8">
+                        <div class=" title-search">{{this.title}}</div>
+                        <div class="author-search">{{this.date}}</div>
+                        <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.desc}}</div>
+                    </div>
+                </div>
+            </a>
+
+            {{/each}}
+            <nav id="news_nav">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+
     </div>
-
-    <nav>
-        <ul class="pagination justify-content-center">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-
-</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
