--- a/views/search.hbs
+++ b/views/search.hbs
@@ -47,8 +47,8 @@
             <div class="tab-content">
                 {{#each books}}
                 {{#if @first}}
-                <div class="tab-pane fade show active" id="pills-{{this.id}}" role="tabpanel"
-                    aria-labelledby="pills-{{this.id}}-tab">
+                <div class="tab-pane fade show active" id="pills-b{{this.id}}" role="tabpanel"
+                    aria-labelledby="pills-b{{this.id}}-tab">
                     {{#each this.book}}
                     <a href="/book-detail/{{this._id}}">
                         <div class="row justify-content-center" style="padding: 10px;">
@@ -72,8 +72,8 @@
                     {{/each}}
                 </div>
                 {{else}}
-                <div class="tab-pane fade" id="pills-{{this.id}}" role="tabpanel"
-                    aria-labelledby="pills-{{this.id}}-tab">
+                <div class="tab-pane fade" id="pills-b{{this.id}}" role="tabpanel"
+                    aria-labelledby="pills-b{{this.id}}-tab">
                     {{#each this.book}}
                     <a href="/book-detail/{{this._id}}">
                         <div class="row justify-content-center" style="padding: 10px;">
@@ -111,12 +111,12 @@
                     </li>
                     {{#each books}}
                     {{#if @first}}
-                    <li class="page-item nav-item"><a class="page-link nav-link active" id="pills-{{this.id}}-tab" data-toggle="pill"
-                            href="#pills-{{this.id}}" role="tab" aria-controls="pills-{{this.id}}"
+                    <li class="page-item nav-item"><a class="page-link nav-link active" id="pills-b{{this.id}}-tab"
+                            data-toggle="pill" href="#pills-b{{this.id}}" role="tab" aria-controls="pills-b{{this.id}}"
                             aria-selected="true">{{this.id}}</a></li>
                     {{else}}
-                    <li class="page-item nav-item"><a class="page-link nav-link" id="pills-{{this.id}}-tab" data-toggle="pill"
-                            href="#pills-{{this.id}}" role="tab" aria-controls="pills-{{this.id}}"
+                    <li class="page-item nav-item"><a class="page-link nav-link" id="pills-b{{this.id}}-tab"
+                            data-toggle="pill" href="#pills-b{{this.id}}" role="tab" aria-controls="pills-b{{this.id}}"
                             aria-selected="false">{{this.id}}</a></li>
                     {{/if}}
                     {{/each}}
@@ -134,7 +134,7 @@
         <div id="news_section" style="display: none;">
             <div class="row justify-content-center align-items-center" style="padding-top:10px">
                 <div class="col-1"></div>
-                <div class="col row justify-content-center">Có {{news.length}} kết quả</div>
+                <div class="col row justify-content-center">Có {{news_length}} kết quả</div>
                 <div class="row align-items-center justify-content-center col-6">
                     <div>Sắp xếp theo </div>
 
@@ -153,35 +153,75 @@
                 <div class="col row justify-content-center">+ Thêm bộ lọc</div>
                 <div class="col-1"></div>
             </div>
-            {{#each news}}
-            <a href="/news-detail/{{this._id}}">
-                <div class="row justify-content-center" style="padding: 10px;">
-                    <div class="col-4 col-sm-3 col-md-2">
-                        <div class="d-flex justify-content-end">
-                            <img src={{this.image_url}} alt="">
+            <div class="tab-content">
+                {{#each news}}
+                {{#if @first}}
+                <div class="tab-pane fade show active" id="pills-n{{this.id}}" role="tabpanel"
+                    aria-labelledby="pills-n{{this.id}}-tab">
+                    {{#each this.newc}}
+                    <a href="/news-detail/{{this._id}}">
+                        <div class="row justify-content-center" style="padding: 10px;">
+                            <div class="col-4 col-sm-3 col-md-2">
+                                <div class="d-flex justify-content-end">
+                                    <img src={{this.image_url}} alt="">
 
+                                </div>
+                            </div>
+                            <div class="col-6 col-sm-7 col-md-8">
+                                <div class=" title-search">{{this.title}}</div>
+                                <div class="author-search">{{this.date}}</div>
+                                <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.desc}}</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 col-sm-7 col-md-8">
-                        <div class=" title-search">{{this.title}}</div>
-                        <div class="author-search">{{this.date}}</div>
-                        <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.desc}}</div>
-                    </div>
+                    </a>
+                    {{/each}}
                 </div>
-            </a>
 
+                {{else}}
+                <div class="tab-pane fade" id="pills-n{{this.id}}" role="tabpanel"
+                    aria-labelledby="pills-n{{this.id}}-tab">
+                    {{#each this.newc}}
+                    <a href="/news-detail/{{this._id}}">
+                        <div class="row justify-content-center" style="padding: 10px;">
+                            <div class="col-4 col-sm-3 col-md-2">
+                                <div class="d-flex justify-content-end">
+                                    <img src={{this.image_url}} alt="">
+
+                                </div>
+                            </div>
+                            <div class="col-6 col-sm-7 col-md-8">
+                                <div class=" title-search">{{this.title}}</div>
+                                <div class="author-search">{{this.date}}</div>
+                                <div style="overflow:hidden; text-overflow: ellipsis; color:black;">{{this.desc}}
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    {{/each}}
+                </div>
+            </div>
+            {{/if}}
             {{/each}}
+
             <nav id="news_nav">
-                <ul class="pagination justify-content-center">
+                <ul class="nav nav-pills pagination justify-content-center" role="tablist">
                     <li class="page-item">
                         <a class="page-link" href="#" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                             <span class="sr-only">Previous</span>
                         </a>
                     </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    {{#each news}}
+                    {{#if @first}}
+                    <li class="page-item nav-item"><a class="page-link nav-link active" id="pills-n{{this.id}}-tab"
+                            data-toggle="pill" href="#pills-n{{this.id}}" role="tab" aria-controls="pills-n{{this.id}}"
+                            aria-selected="true">{{this.id}}</a></li>
+                    {{else}}
+                    <li class="page-item nav-item"><a class="page-link nav-link" id="pills-n{{this.id}}-tab"
+                            data-toggle="pill" href="#pills-n{{this.id}}" role="tab" aria-controls="pills-n{{this.id}}"
+                            aria-selected="false">{{this.id}}</a></li>
+                    {{/if}}
+                    {{/each}}
                     <li class="page-item">
                         <a class="page-link" href="#" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
