--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,49 +1,60 @@
 <div class="container" style="padding:0; width:95%">
     <div class="content-section no-padding login-area  first-section">
-        <div class="row" style="padding: 100px 50px 100px 50px">
-            <div class="col-lg row align-content-center justify-content-center" style="margin-left: 2px;">
-                <div class="row justify-content-center align-items-center" style="width: 80%;">
-                    <div class="login">
-                        <div class="row justify-content-center">
-                            <span class="title-section text-center" style="padding-bottom: 0;"> Đăng Nhập </span>
-                        </div>
-                        <form id="formLogin" action="" method="POST">
-                            <div class="username">
-                                <input id="username_form" name="username" type="text" class="user-input"
-                                    placeholder="Tên đăng nhập">
-                            </div>
-                            <div class="password">
-                                <input id="password_form" name="password" type="password" class="user-input"
-                                    placeholder="Mật khẩu">
-                            </div>
-                            <div class="login-forget-pass">
-                                <button type="submit" class="login-button font-normal-bold">Đăng nhập</button>
-                                <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
-                            </div>
-                        </form>
+        <div style="padding: 100px 50px 100px 50px">
+            <div id="noti-login-problem">
+                
+            </div>
 
+
+
+            <div class="row">
+
+                <div class="col-lg row align-content-center justify-content-center" style="margin-left: 2px;">
+                    <div class="row justify-content-center align-items-center" style="width: 80%;">
+                        <div class="login">
+                            <div class="row justify-content-center">
+                                <span class="title-section text-center" style="padding-bottom: 0;"> Đăng Nhập </span>
+                            </div>
+                            <form id="formLogin" action="" method="POST">
+                                <div class="username">
+                                    <input id="username_form" name="username" type="text" class="user-input"
+                                        placeholder="Tên đăng nhập">
+                                </div>
+                                <div class="password">
+                                    <input id="password_form" name="password" type="password" class="user-input"
+                                        placeholder="Mật khẩu">
+                                </div>
+                                <div class="login-forget-pass">
+                                    <button type="submit" class="login-button font-normal-bold">Đăng nhập</button>
+                                    <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
+                                </div>
+                            </form>
+
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg">
-                <div class="sign-up-area row justify-content-center align-content-center" style="padding-top:1em">
-                    <div class="rectangle-ECF0F1 text-algin-center">
-                        <div style="padding: 50px">
-                            <div>
-                                <span class="text-color-3498DB" style="font-size: 30px; font-weight:bold">Chưa
-                                    có tài
-                                    khoản</span>
-                            </div>
-                            <div class="sign-up">
-                                <a href="/sign-up">
-                                    <button class="sign-up-button font-normal-bold">Đăng Ký</button>
-                                </a>
+                <div class="col-lg">
+                    <div class="sign-up-area row justify-content-center align-content-center" style="padding-top:1em">
+                        <div class="rectangle-ECF0F1 text-algin-center">
+                            <div style="padding: 50px">
+                                <div>
+                                    <span class="text-color-3498DB" style="font-size: 30px; font-weight:bold">Chưa
+                                        có tài
+                                        khoản</span>
+                                </div>
+                                <div class="sign-up">
+                                    <a href="/sign-up">
+                                        <button class="sign-up-button font-normal-bold">Đăng Ký</button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+
     </div>
 </div>
 <link rel="stylesheet" href="/stylesheets/login.css">
