Thêm href vào footer

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -83,9 +83,9 @@
       </div>
       <div class="link-info">
         <div class="title-footer">Thông tin</div>
-        <div><a href="#" style="color: black;">Website khoa</a></div>
-        <div><a href="#" style="color: black;">Website trường</a></div>
-        <div><img src="/images/icon-fb.jpg" class="icon-footer"> <a href="#" style="color: black;">Facebook</a></div>
+        <div><a href="https://www.fit.hcmus.edu.vn/" style="color: black;">Website khoa</a></div>
+        <div><a href="https://www.hcmus.edu.vn/" style="color: black;">Website trường</a></div>
+        <div><img src="/images/icon-fb.jpg" class="icon-footer"> <a href="https://www.facebook.com/us.vnuhcm" style="color: black;">Facebook</a></div>
 
       </div>
     </div>
