Sửa lại layout trang about cho giống giống news detail

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,12 @@
 <div class="container-fluid" style="padding:0; width:95%">
-    <div class="content-section first-section d-flex bg-white no-padding align-items-center">
-        <div style="padding: 10px; font-size:20px">{{{content}}}</div>
+    <div class="content-section first-section bg-white" style="text-align: center;">
+        <div style="padding: 30px 0px 0px 0px">
+            <img class="card-img-top" src="/images/about.png" alt="Card image cap" style="width: 50%; height: 50%; ">
+        </div>
+        <div style="text-align: left; padding: 10px 50px 10px 50px">
+
+            <div style="padding: 10px; font-size:20px">{{{content}}}</div>
+        </div>
     </div>
 </div>
 <script src="/function/change-nav.js" current_page="Giới thiệu"></script>
