Hotfix: trang news chưa có tính năng search
Sửa lại thanh search trang news thành loại form.

--- a/views/news.hbs
+++ b/views/news.hbs
@@ -1,13 +1,14 @@
 <div class="container-fluid" style="padding:0; width:95%">
     <div class="content-section picture-search d-flex justify-content-center bg-white no-padding align-items-center">
-        <div id="searchbar-in-picture" class="input-group col-8">
+        <form id="searchbar-in-picture" class="input-group col-8" method="POST" action="/search">
 
-            <input type="text" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..." aria-label="Username"
-                aria-describedby="basic-addon1">
+            <input type="text" name="searchBar" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..."
+                aria-label="Username" aria-describedby="basic-addon1">
             <div class="input-group-append">
-                <a class="input-group-text" href="/search"><img src="/images/search-icon.svg" alt="" style="width: 20px;"></a>
+                <button type="submit" class="input-group-text"><img src="/images/search-icon.svg" alt=""
+                        style="width: 20px;"></button>
             </div>
-        </div>
+        </form>
     </div>
     {{!Sự kiện}}
     <div class="content-section bg-white no-padding">
@@ -18,7 +19,7 @@
                 <div class="d-flex justify-content-center">
                     {{#each sectionSuKien.articles}}
                     {{#if @first}}
-                    <a href="/news-detail/{{this._id}}" + >
+                    <a href="/news-detail/{{this._id}}" +>
                         <div class="card" style="width: 220px; border:none;">
 
                             <div class="card-body" style="padding:5px">
