Thêm href mailto ở footer

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -79,7 +79,7 @@
         <div>Trường Đại học Khoa học Tự nhiên, ĐHQG-HCM</div>
         <div><img src="/images/icon-address.svg" alt="" class="icon-footer"> 227 Nguyễn Văn Cừ, Quận 5, TP. Hồ Chí Minh,
           Việt Nam </div>
-        <a href="#"><img src="/images/icon-email.svg" alt="" class="icon-footer"> info@fit.hcmus.edu.vn</a>
+        <a href="mailto: info@fit.hcmus.edu.vn"><img src="/images/icon-email.svg" alt="" class="icon-footer"> info@fit.hcmus.edu.vn</a>
       </div>
       <div class="link-info">
         <div class="title-footer">Thông tin</div>
