--- a/views/lib-index.hbs
+++ b/views/lib-index.hbs
@@ -148,6 +148,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.7.0/echarts-en.min.js"></script>
 <script>
+    const {bookBorrowData, borrowReturnData, readerBorrowData, genreBorrowData, statusData} = {{toJSON chartData}};
     bookBorrowData = {
         ids: ["MSD-XAY", "IDS-XZY", "AGF-EXF"],
         books: ["Nhập môn Lập trình\nhướng đối tượng", "Trí tuệ nhân tạo", "Toán gì gì đó"],
